2012-??-?? Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.9
	* Version 1.5.9 released

2012-11-26 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added workaround to combine CDO operators with the result of mergetime, merge, copy, cat, ens<STAT>

2012-11-21 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* enlarge: added missing value support [request: Chris Fletcher]

2012-11-15 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Split: added parameter swap to swap the position of <obase> and <xxx>  in the filename
	* splitgrid: bug fix for gridID output in filename <xxx>
	* splitzaxis: bug fix for zaxisID output in filename <xxx>

2012-11-14 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* cdo option -z zip: added optional compression level -z zip[_1-9] [request: Etienne Tourigny]

2012-11-08 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* pipeInqVlist: wait MIN_WAIT_CYCLES if processNumsActive() == 1 (bug fix) [report:  Jaison Ambadan]

2012-11-07 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* bug fix for user defined lon/lat grids
             This bug was introduced in CDO version 1.5.8.

2012-10-30 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.8
	* Version 1.5.8 released

2012-10-29 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* mastrfu: set datatype to 32-bit float

2012-10-23 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Fldstat: set weight to 1 if gridsize is 1

2012-10-19 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added operator seinfo

2012-10-17 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_rr1: result has wrong long name attribute [Bug #2763]
	* eca_pd: disabled, use eca_rr1  (same functionallity) [Bug #2763]

2012-10-14 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added operator tee

2012-10-13 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplaf: fixed bug in binary_search_int()

2012-10-05 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
